--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=16.17.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -10,6 +13,7 @@
   },
   "dependencies": {
     "antd": "^5.1.5",
+    "classnames": "^2.3.2",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
