--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev": "vite",
     "build": "tsc && vite build --mode test",
     "preview": "vite preview",
-    "build:prod": "tsc && vite build --mode prod"
+    "build:prod": "tsc && vite build --mode prod",
+    "test": "playwright test",
+    "report": "playwright show-report"
   },
   "dependencies": {
     "antd": "^5.1.5",
@@ -20,11 +22,16 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.33.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
-  }
+  },
+  "main": "index.js",
+  "repository": "git@github.com:laclys/orderSys.git",
+  "author": "Lac <laclys@126.com>",
+  "license": "MIT"
 }
